@@ -1,0 +1,12 @@
+package org.apache.cayenne.testdo.meaningful_pk;
+
+import org.apache.cayenne.testdo.meaningful_pk.auto._ClientMeaningfulPkDep2;
+
+/**
+ * A persistent class mapped as "MeaningfulPkDep2" Cayenne entity.
+ */
+public class ClientMeaningfulPkDep2 extends _ClientMeaningfulPkDep2 {
+
+     private static final long serialVersionUID = 1L;
+     
+}
