@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.meaningful_pk;
+
+import org.apache.cayenne.testdo.meaningful_pk.auto._MeaningfulPkDep2;
+
+public class MeaningfulPkDep2 extends _MeaningfulPkDep2 {
+
+    private static final long serialVersionUID = 1L;
+
+}
