@@ -5,8 +5,10 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 
 import org.apache.cayenne.BaseDataObject;
+import org.apache.cayenne.exp.property.EntityProperty;
 import org.apache.cayenne.exp.property.PropertyFactory;
 import org.apache.cayenne.exp.property.StringProperty;
+import org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkDep2;
 
 /**
  * Class _MeaningfulPk was generated by Cayenne.
@@ -16,14 +18,16 @@ import org.apache.cayenne.exp.property.StringProperty;
  */
 public abstract class _MeaningfulPk extends BaseDataObject {
 
-    private static final long serialVersionUID = 1L; 
+    private static final long serialVersionUID = 1L;
 
     public static final String PK_PK_COLUMN = "PK";
 
     public static final StringProperty<String> PK = PropertyFactory.createString("pk", String.class);
+    public static final EntityProperty<MeaningfulPkDep2> MEANINGFUL_PK_DEP2S = PropertyFactory.createEntity("meaningfulPkDep2s", MeaningfulPkDep2.class);
 
     protected String pk;
 
+    protected Object meaningfulPkDep2s;
 
     public void setPk(String pk) {
         beforePropertyWrite("pk", this.pk, pk);
@@ -35,6 +39,14 @@ public abstract class _MeaningfulPk extends BaseDataObject {
         return this.pk;
     }
 
+    public void setMeaningfulPkDep2s(MeaningfulPkDep2 meaningfulPkDep2s) {
+        setToOneTarget("meaningfulPkDep2s", meaningfulPkDep2s, true);
+    }
+
+    public MeaningfulPkDep2 getMeaningfulPkDep2s() {
+        return (MeaningfulPkDep2)readProperty("meaningfulPkDep2s");
+    }
+
     @Override
     public Object readPropertyDirectly(String propName) {
         if(propName == null) {
@@ -44,6 +56,8 @@ public abstract class _MeaningfulPk extends BaseDataObject {
         switch(propName) {
             case "pk":
                 return this.pk;
+            case "meaningfulPkDep2s":
+                return this.meaningfulPkDep2s;
             default:
                 return super.readPropertyDirectly(propName);
         }
@@ -58,6 +72,9 @@ public abstract class _MeaningfulPk extends BaseDataObject {
         switch (propName) {
             case "pk":
                 this.pk = (String)val;
+                break;
+            case "meaningfulPkDep2s":
+                this.meaningfulPkDep2s = val;
                 break;
             default:
                 super.writePropertyDirectly(propName, val);
@@ -76,12 +93,14 @@ public abstract class _MeaningfulPk extends BaseDataObject {
     protected void writeState(ObjectOutputStream out) throws IOException {
         super.writeState(out);
         out.writeObject(this.pk);
+        out.writeObject(this.meaningfulPkDep2s);
     }
 
     @Override
     protected void readState(ObjectInputStream in) throws IOException, ClassNotFoundException {
         super.readState(in);
         this.pk = (String)in.readObject();
+        this.meaningfulPkDep2s = in.readObject();
     }
 
 }
