@@ -6,31 +6,30 @@ import java.io.ObjectOutputStream;
 
 import org.apache.cayenne.BaseDataObject;
 import org.apache.cayenne.exp.property.EntityProperty;
-import org.apache.cayenne.exp.property.NumericProperty;
 import org.apache.cayenne.exp.property.PropertyFactory;
 import org.apache.cayenne.exp.property.StringProperty;
-import org.apache.cayenne.testdo.meaningful_pk.MeaningfulPKTest1;
+import org.apache.cayenne.testdo.meaningful_pk.MeaningfulPk;
 
 /**
- * Class _MeaningfulPKDep was generated by Cayenne.
+ * Class _MeaningfulPkDep2 was generated by Cayenne.
  * It is probably a good idea to avoid changing this class manually,
  * since it may be overwritten next time code is regenerated.
  * If you need to make any customizations, please use subclass.
  */
-public abstract class _MeaningfulPKDep extends BaseDataObject {
+public abstract class _MeaningfulPkDep2 extends BaseDataObject {
 
     private static final long serialVersionUID = 1L;
 
-    public static final String PK_ATTRIBUTE_PK_COLUMN = "PK_ATTRIBUTE";
+    public static final String PK_PK_COLUMN = "PK";
 
     public static final StringProperty<String> DESCR = PropertyFactory.createString("descr", String.class);
-    public static final NumericProperty<Integer> PK = PropertyFactory.createNumeric("pk", Integer.class);
-    public static final EntityProperty<MeaningfulPKTest1> TO_MEANINGFUL_PK = PropertyFactory.createEntity("toMeaningfulPK", MeaningfulPKTest1.class);
+    public static final StringProperty<String> PK = PropertyFactory.createString("pk", String.class);
+    public static final EntityProperty<MeaningfulPk> MEANINGFUL_PK = PropertyFactory.createEntity("meaningfulPk", MeaningfulPk.class);
 
     protected String descr;
-    protected int pk;
+    protected String pk;
 
-    protected Object toMeaningfulPK;
+    protected Object meaningfulPk;
 
     public void setDescr(String descr) {
         beforePropertyWrite("descr", this.descr, descr);
@@ -42,22 +41,22 @@ public abstract class _MeaningfulPKDep extends BaseDataObject {
         return this.descr;
     }
 
-    public void setPk(int pk) {
+    public void setPk(String pk) {
         beforePropertyWrite("pk", this.pk, pk);
         this.pk = pk;
     }
 
-    public int getPk() {
+    public String getPk() {
         beforePropertyRead("pk");
         return this.pk;
     }
 
-    public void setToMeaningfulPK(MeaningfulPKTest1 toMeaningfulPK) {
-        setToOneTarget("toMeaningfulPK", toMeaningfulPK, true);
+    public void setMeaningfulPk(MeaningfulPk meaningfulPk) {
+        setToOneTarget("meaningfulPk", meaningfulPk, true);
     }
 
-    public MeaningfulPKTest1 getToMeaningfulPK() {
-        return (MeaningfulPKTest1)readProperty("toMeaningfulPK");
+    public MeaningfulPk getMeaningfulPk() {
+        return (MeaningfulPk)readProperty("meaningfulPk");
     }
 
     @Override
@@ -71,8 +70,8 @@ public abstract class _MeaningfulPKDep extends BaseDataObject {
                 return this.descr;
             case "pk":
                 return this.pk;
-            case "toMeaningfulPK":
-                return this.toMeaningfulPK;
+            case "meaningfulPk":
+                return this.meaningfulPk;
             default:
                 return super.readPropertyDirectly(propName);
         }
@@ -89,10 +88,10 @@ public abstract class _MeaningfulPKDep extends BaseDataObject {
                 this.descr = (String)val;
                 break;
             case "pk":
-                this.pk = val == null ? 0 : (int)val;
+                this.pk = (String)val;
                 break;
-            case "toMeaningfulPK":
-                this.toMeaningfulPK = val;
+            case "meaningfulPk":
+                this.meaningfulPk = val;
                 break;
             default:
                 super.writePropertyDirectly(propName, val);
@@ -111,16 +110,16 @@ public abstract class _MeaningfulPKDep extends BaseDataObject {
     protected void writeState(ObjectOutputStream out) throws IOException {
         super.writeState(out);
         out.writeObject(this.descr);
-        out.writeInt(this.pk);
-        out.writeObject(this.toMeaningfulPK);
+        out.writeObject(this.pk);
+        out.writeObject(this.meaningfulPk);
     }
 
     @Override
     protected void readState(ObjectInputStream in) throws IOException, ClassNotFoundException {
         super.readState(in);
         this.descr = (String)in.readObject();
-        this.pk = in.readInt();
-        this.toMeaningfulPK = in.readObject();
+        this.pk = (String)in.readObject();
+        this.meaningfulPk = in.readObject();
     }
 
 }
