@@ -16,7 +16,7 @@ import org.apache.cayenne.exp.property.PropertyFactory;
  */
 public abstract class _MeaningfulPkTest2 extends BaseDataObject {
 
-    private static final long serialVersionUID = 1L; 
+    private static final long serialVersionUID = 1L;
 
     public static final String PK_ATTRIBUTE_PK_COLUMN = "PK_ATTRIBUTE";
 
